@@ -1228,14 +1228,7 @@ Tcl_ExprObj(
 	const char *string = TclGetStringFromObj(objPtr, &length);
 
 	TclInitCompileEnv(interp, &compEnv, string, length, NULL, 0);
-	
-	/*
-	 * TODO: Consider creating and calling an alternative routine
-	 * that will compile bytecode for one-off expressions like this
-	 * one with optimize==0, for improved efficiency.
-	 */
-
-	TclCompileExpr(interp, string, length, &compEnv);
+	TclCompileExpr(interp, string, length, &compEnv, 0);
 
 	/*
 	 * Successful compilation. If the expression yielded no instructions,
